# music-py

./: mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: scale.md
music_py/: chords.py  cli.py  scale.py  scales.py
tests/: chords_test.py  cli_test.py  scales_test.py
