[tool.poetry]
name = "music-py"
version = "0.1.0"
description = ""
authors = ["Dirceu Silva <ddasilvajunior@vio.com>"]
readme = "README.md"
packages = [{include = "music_py"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
