[tool.poetry]
name = "music-py"
version = "0.1.0"
description = ""
authors = ["Dirceu Silva <ddasilvajunior@vio.com>"]
readme = "README.md"
packages = [{include = "music_py"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.21"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
lint-format = "blue . && isort . "
docs = "mkdocs serve"
pre_test = "task lint-format"
test = "pytest -s -x --cov=music_py -vv"
post_test = "coverage html"